fixed https login issues bumped dependancy versions